<resources>
    <string name="app_name">SIA</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="base_url">https://siarestuat.uiia.org/SIAREST/rest/SIA/</string>
    <string name="api_sia_login">siaLogin</string>
    <string name="api_forgot_password">forgotPassword</string>
    <string name="api_forgot_username">forgotUserName</string>
    <string name="api_get_equipment_location_list">getLocationList</string>
    <string name="api_get_original_location_list">getLocationList</string>
    <string name="api_get_companyname_and_scac_by_companyname">getCompanyNameAndSCACByCompanyName</string>
    <string name="api_get_iep_scac_by_chassis_id">getIEPScacByChassisId</string>
    <string name="api_validate_initiate_interchange_details">validateInitiateInterchangeDetails</string>
    <string name="api_save_initiate_interchange_details">saveInitiateInterchangeDetails</string>
    <string name="api_add_equipment_to_pool">addEquipmentToPool</string>
    <string name="api_get_ep_user_list_by_tpu">getEPUserListByTPU</string>
    <string name="api_sia_lookup">siaLookup</string>
    <string name="api_setup_page">setupPage</string>
    <string name="api_get_tpu_token_by_ep">getTPUTokenByEP</string>
    <string name="api_get_interchange_request_details">getInterchangeRequestDetails</string>
    <string name="api_get_equipment_list">getEquipmentList</string>
    <string name="api_delete_notif_avail_request_by_na_id">deleteNotifAvailRequestByNaId</string>
    <string name="api_validate_notif_avail_equip_details">validateNotifAvailEquipDetails</string>
    <string name="api_interchange_request_operations">interchangeRequestOperations</string>
    <string name="api_get_uiia_exhibit_list">getUIIAExhibitList</string>
    <string name="api_get_list_work_done_by_tpu">getListWorkDoneByTPU</string>
    <string name="font_family">sans-serif-medium</string>
    <string name="dialog_title">STREET INTERCHANGE</string>
    <string name="dialog_lbl">Are you sure you want to exit?</string>
    <string name="dialog_yes_btn">Yes</string>
    <string name="dialog_no_btn">No</string>
    <string name="dialog_cancel_btn">CANCEL</string>
    <string name="dialog_ok_btn">OK</string>
    <string name="delete_confirm_msg">Are you sure want to delete this record?</string>
    <string name="dialog_cancel_confirm_msg">Are you sure want to cancel this request?</string>
    <string name="dialog_submit_confirm_msg">Are you sure want to submit this request?</string>
    <string name="dialog_cancel_request_confirm_msg">Are you sure want to cancel Interchange Request?</string>
    <string name="dialog_reject_request_confirm_msg">Are you sure want to reject Interchange Request?</string>
    <string name="dialog_approve_request_confirm_msg">Are you sure want to approve Interchange Request?</string>
    <string name="STATUS_APPROVED">APPROVED</string>
    <string name="limit">10</string>
    <string name="default_offset">1</string>
    <string name="date_format">MM/dd/yyyy</string>
    <string name="note_chassis_number">In case of blank chassis number, system will populate ZZZZ999999 to identify MC Provided Chassis.</string>
    <string name="lbl_disclaimerText">Motor Carrier A (the originating MC) will continue to be the responsible party for the equipment under the terms of the UIIA until the street interchange request has been approved and accepted by all parties.</string>
    <string name="lbl_disclaimerText_st">Motor Carrier A (the originating MC) will continue to be the responsible party for the equipment under the terms of the UIIA until the street turn request has been approved and accepted by all parties.</string>
    <string name="dialog_title_mc_login">MC LOGIN</string>
    <string name="dialog_title_ep_login">EP LOGIN</string>
    <string name="dialog_title_idd_login">IDD LOGIN</string>
    <string name="dialog_title_tpu_login">TPU LOGIN</string>
    <string name="dialog_title_ep_sec_login">EP SEC LOGIN</string>
    <string name="dialog_title_mc_sec_login">MC SEC LOGIN</string>
    <string name="dialog_title_street_turn_request">STREET TURN</string>
    <string name="dialog_title_verify_details">VERIFY DETAILS</string>
    <string name="dialog_title_location_search">LOCATION SEARCH</string>
    <string name="dialog_title_street_interchange_request">STREET INTERCHANGE</string>
    <string name="dialog_title_ep_sec_forgot_password">EP SEC FORGOT PASSWORD</string>
    <string name="dialog_title_mc_sec_forgot_password">MC SEC FORGOT PASSWORD</string>
    <string name="dialog_title_ep_user_list">EP USER LIST</string>
    <string name="dialog_title_interchange_request_list">SEARCH RESULTS</string>
    <string name="dialog_title_request_pool_search">SEARCH EQUIPMENT AVAILABILITY</string>
    <string name="dialog_title_add_equipment_to_pool">ADD EQUIPMENT TO POOL</string>
    <string name="dialog_title_forgot_password">FORGOT PASSWORD</string>
    <string name="dialog_title_forgot_username">FORGOT USERNAME</string>
    <string name="dialog_title_delete_from_pool">Delete from Pool</string>
    <string name="dialog_title_interchange_request_operation">Interchange Request Operation</string>
    <string name="dialog_title_add_remarks">ADD REMARKS</string>
    <string name="lbl_other">Other</string>
    <string name="lbl_username">USERNAME</string>
    <string name="lbl_password">PASSWORD</string>
    <string name="lbl_idd_pin">IDD PIN</string>
    <string name="lbl_scac">SCAC</string>
    <string name="lbl_idd_lic_no">DRIVER LICENSE NO</string>
    <string name="lbl_idd_lic_state">DRIVER LICENSE STATE</string>
    <string name="lbl_email">EMAIL</string>
    <string name="title_forgot_your_username">Forgot Your Username?</string>
    <string name="title_forgot_your_password">Forgot Your Password?</string>
    <string name="title_dashboard">DASHBOARD</string>
    <string name="dashboard_menu_action_required">Action Required</string>
    <string name="lbl_motor_carrier_name">MOTOR CARRIER NAME</string>
    <string name="lbl_motor_carrier_scac">MOTOR CARRIER SCAC</string>
    <string name="lbl_motor_carrier_a_name">MOTOR CARRIER A\'S NAME</string>
    <string name="lbl_motor_carrier_a_scac">MOTOR CARRIER A\'S SCAC</string>
    <string name="lbl_motor_carrier_b_name">MOTOR CARRIER B\'S NAME</string>
    <string name="lbl_motor_carrier_b_scac">MOTOR CARRIER B\'S SCAC</string>
    <string name="lbl_container_provider_name">CONTAINER PROVIDER NAME</string>
    <string name="lbl_container_provider_scac">CONTAINER PROVIDER SCAC</string>
    <string name="lbl_container_provider">CONTAINER PROVIDER</string>
    <string name="lbl_container_number">CONTAINER NUMBER</string>
    <string name="lbl_export_booking_number">EXPORT BOOKING NUMBER</string>
    <string name="lbl_import_bl">IMPORT B/L</string>
    <string name="lbl_original_interchange_location">Original Interchange Location</string>
    <string name="lbl_equipment_location">Equipment Location</string>
    <string name="lbl_type_of_interchange">TYPE OF INTERCHANGE</string>
    <string name="lbl_container_type">CONTAINER TYPE</string>
    <string name="lbl_container_size">CONTAINER SIZE</string>
    <string name="lbl_chassis_type">CHASSIS TYPE</string>
    <string name="lbl_chassis_size">CHASSIS SIZE</string>
    <string name="lbl_genset_number">GENSET NUMBER</string>
    <string name="lbl_from_date">FROM DATE</string>
    <string name="lbl_to_date">TO DATE</string>
    <string name="lbl_action_required">ACTION REQUIRED</string>
    <string name="lbl_created_date">CREATED DATE</string>
    <string name="lbl_container_num">CONTAINER #</string>
    <string name="lbl_export_booking_num">EXPORT BOOKING #</string>
    <string name="lbl_container_ep_name">CONTAINER EP NAME</string>
    <string name="lbl_container_ep_scac">CONTAINER EP SCAC</string>
    <string name="lbl_motor_carrier_a_name_result">MOTOR CARRIER A\'S NAME</string>
    <string name="lbl_motor_carrier_a_scac_result">MOTOR CARRIER A\'S SCAC</string>
    <string name="lbl_motor_carrier_b_name_result">MOTOR CARRIER B\'S NAME</string>
    <string name="lbl_motor_carrier_b_scac_result">MOTOR CARRIER B\'S SCAC</string>
    <string name="lbl_approved_pending_date">APPROVAL DATE</string>
    <string name="lbl_rejected_date">REJECTION DATE</string>
    <string name="lbl_cancelled_date">CANCELLED DATE</string>
    <string name="lbl_onhold_date">ONHOLD DATE</string>
    <string name="lbl_load_status">LOAD STATUS</string>
    <string name="lbl_chassis_num">CHASSIS #</string>
    <string name="lbl_iep_scac">IEP SCAC</string>
    <string name="lbl_chassis_number">CHASSIS NUMBER</string>
    <string name="lbl_chassis_iep_scac">CHASSIS IEP SCAC</string>
    <string name="lbl_state">STATE</string>
    <string name="lbl_zip_code">ZIP CODE</string>
    <string name="lbl_location_name">LOCATION NAME</string>
    <string name="lbl_location_address">LOCATION ADDRESS</string>
    <string name="lbl_city">CITY</string>
    <string name="lbl_note">NOTE</string>
    <string name="hint_username">ENTER USERNAME</string>
    <string name="hint_password">ENTER PASSWORD</string>
    <string name="hint_idd_pin">ENTER IDD PIN</string>
    <string name="hint_scac">ENTER SCAC</string>
    <string name="hint_mc_scac">ENTER MC SCAC</string>
    <string name="hint_ep_scac">ENTER EP SCAC</string>
    <string name="hint_idd_lic_no">ENTER DRIVER LICENSE NO</string>
    <string name="hint_idd_lic_state">ENTER DRIVER LICENSE STATE</string>
    <string name="hint_email">ENTER REGISTERED EMAIL</string>
    <string name="hint_motor_carrier_name">ENTER MOTOR CARRIER NAME</string>
    <string name="hint_motor_carrier_a_name">ENTER MOTOR CARRIER A\'S NAME</string>
    <string name="hint_motor_carrier_b_name">ENTER MOTOR CARRIER B\'S NAME</string>
    <string name="hint_auto_populated">AUTO POPULATED</string>
    <string name="hint_container_provider_name">ENTER CONTAINER PROVIDER NAME</string>
    <string name="hint_container_number">ENTER CONTAINER NUMBER</string>
    <string name="hint_export_booking_number">ENTER EXPORT BOOKING NUMBER</string>
    <string name="hint_import_bl">ENTER IMPORT B/L</string>
    <string name="hint_search_location_text">Search By City, Name, Zip, IANA#, SPLC#</string>
    <string name="hint_genset_number">ENTER GENSET NUMBER</string>
    <string name="hint_from_date">SEARCH BY FROM DATE</string>
    <string name="hint_to_date">SEARCH BY TO DATE</string>
    <string name="hint_search_by_container_no">SEARCH BY CONTAINER#</string>
    <string name="hint_search_by_export_booking_no">SEARCH BY EXPORT BOOKING#</string>
    <string name="hint_search_by_scac">SEARCH BY SCAC</string>
    <string name="hint_search_by_mc_scac">SEARCH BY MC SCAC</string>
    <string name="hint_search_by_ep_scac">SEARCH BY CONTAINER PROVIDER SCAC</string>
    <string name="hint_other_container_type">ENTER OTHER CONTAINER TYPE</string>
    <string name="hint_other_container_size">ENTER OTHER CONTAINER SIZE</string>
    <string name="hint_other_chassis_type">ENTER OTHER CHASSIS TYPE</string>
    <string name="hint_other_chassis_size">ENTER OTHER CHASSIS SIZE</string>
    <string name="hint_chassis_number">ENTER CHASSIS NUMBER</string>
    <string name="btn_sign_on">SIGN ON</string>
    <string name="btn_submit">SUBMIT</string>
    <string name="btn_search">SEARCH</string>
    <string name="btn_delete">DELETE</string>
    <string name="lbl_trouble_signing_on">FORGOT YOUR PASSWORD?</string>
    <string name="btn_mc_sec_user">Login to MC Secondary User</string>
    <string name="btn_ep_sec_user">Login to EP Secondary User</string>
    <string name="btn_idd_lic_no_state">Login With Driver License No &amp; State</string>
    <string name="msg_error_no_internet">Hey! It looks like you are offline, please check your internet connection.</string>
    <string name="btn_retry">RETRY</string>
    <string name="btn_go_back">GO BACK</string>
</resources>