<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@drawable/curve_shape"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    >

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:text="SIA Title"
        android:textSize="15dp"
        android:textColor="@color/color_black"
        android:layout_margin="5dp"
        android:textStyle="bold"
        android:textAlignment="center"
        />

    <TextView
        android:id="@+id/messageTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#000"
        android:layout_margin="5dp"
        android:text="@string/dialog_lbl"
        android:textAlignment="center"
        android:gravity="center_vertical|center_horizontal"
        android:layout_gravity="center_horizontal|center_vertical"
        />

    <View
        android:id="@+id/mcDotView"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#DCDCDC"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="0dp"
        android:layout_centerHorizontal="true"
        />

    <LinearLayout
        android:id="@+id/okCancelLLayout"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_gravity="center_vertical|center_horizontal"
        android:background="@drawable/curve_shape"
        >

            <Button
                android:id="@+id/yesButton"
                android:layout_width="114dp"
                android:layout_height="wrap_content"
                android:text="@string/dialog_ok_btn"
                android:layout_margin="5dp"
                android:layout_toRightOf="@+id/declineButton"
                android:textColor="@color/appThemeColor"
                android:background="@drawable/border_white"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal|center_vertical"
                android:gravity="center_horizontal|center_vertical"
                />

            <View
                android:id="@+id/verticalView"
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:background="#DCDCDC"
                android:layout_centerHorizontal="true"
                />

            <Button
                android:id="@+id/noButton"
                android:layout_width="114dp"
                android:layout_height="wrap_content"
                android:text="@string/dialog_cancel_btn"
                android:layout_margin="5dp"
                android:background="@drawable/border_white"
                android:textColor="@color/appThemeColor"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal|center_vertical"
                android:gravity="center_horizontal|center_vertical"
                />

    </LinearLayout>

</LinearLayout>